--- a/docs/Syntax/Que.mdx
+++ b/docs/Syntax/Que.mdx
@@ -42,7 +42,7 @@ När **que** är ett frågeord sätts en accent på e:et, *qué*. Det motsvaras 
 
 Som du läste i [ordföljd i frågor](/docs/Syntax/Ordföljd%20i%20frågor) blir ordföljden ofta annorlunda efter frågeord, som i meningen ovan. 
 
-## Korrelat
+## Relativpronomen
 
 Det som gör **que** till ett så underbart ord är att det kan vara **relativpronomen** också. Men vad innebär det? 
 
