navbar, blog + småfel

--- a/docs/Syntax/Que.mdx
+++ b/docs/Syntax/Que.mdx
@@ -78,7 +78,7 @@ Nu när du vet vad ett korrelat är kan vi kolla på hur **que** fungerar som de
     <span className="aqua-dot"></span>
   <span className="subject-text">Objekt</span>
   <span className="magenta-dot"></span>
-  <span className="subject-text">Korrelat</span>
+  <span className="subject-text">Relativpronomen</span>
 </div>
 
 ## SVO eller VSO?
