--- a/blog/2024-08-18-attfå.md
+++ b/blog/2024-08-18-attfå.md
@@ -15,7 +15,7 @@ Motsvaras av **recibir** (mottaga), **obtener** (erhålla), **conseguir** (erhå
 
 <div class="custom-quote">  
 ***Recibí** un mensaje de él ahora mismo.*   
-&nbsp;&nbsp;&nbsp;<small>🇸🇪 *Jag fick precis (mottog) ett meddelande från honom.*</small>    
+&nbsp;&nbsp;&nbsp;<small>🇸🇪 *Jag fick (mottog) precis ett meddelande från honom.*</small>    
 ***Has obtenido** una beca para estudiar en España.*   
 &nbsp;&nbsp;&nbsp;<small>🇸🇪 *Du har fått (erhållit) ett stipendium för att studera i Spanien.*</small>    
 ***Consiguió** un trabajo en mi empresa.*   
